--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ body {
 
 .Content {
   flex: 1;
-  padding: 20px;
+  padding: 20px 0;
   max-height: calc(100vh - 146px);
   overflow: scroll;
   -ms-overflow-style: none; /* Internet Explorer 10+ */
