--- a/src/pages/styles/NavBar.css
+++ b/src/pages/styles/NavBar.css
@@ -21,7 +21,7 @@ body {
     flex-direction: column;
     align-items: center;
     text-decoration: none;
-    color: #fff;
+    color: lightyellow;
     flex: 1;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
