--- a/src/components/styled/GroupPopup.css
+++ b/src/components/styled/GroupPopup.css
@@ -1,6 +1,6 @@
 .group-info-title {
     display: flex;
-    align-items: end;
+    align-items: normal;
     gap: 8px;
     width: 100%;
 }
@@ -9,6 +9,10 @@
     width: 80px;
     height: 80px;
     border-radius: 40px;
+}
+
+.group-info-title .group-stat-second-row {
+    width: 100%;
 }
 
 .group-info-title-info {
@@ -34,26 +38,27 @@
 }
 
 .second-row-title {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: bold;
 }
 
 .group-table-item-data {
     display: flex;
-    justify-content: space-around;
-    font-size: 18px;
+    justify-content: space-between;
+    font-size: 16px;
+    margin-top: 8px;
 }
 
 .all-time-group-container {
     border-radius: 6px;
     padding: 8px;
-    background-color: #181821;
+    background-color: #222222;
     margin-top: 8px;
 }
 
 .all-time-group-title {
     color: white;
-    font-size: 24px;
+    font-size: 18px;
     font-weight: bold;
     display: flex;
     justify-content: center;
@@ -69,7 +74,9 @@
 
 .all-time-group-title svg {
     position: absolute;
-    font-size: 40px;
+    font-size: 30px;
+    background-color: #00c8fb;
+    border-radius: 25px;
     top: -4px;
     right: 0;
     transform: rotate(-0deg);
@@ -84,4 +91,17 @@
 .all-time-shown svg {
     transform: rotate(180deg);
     transition: transform 0.3s ease;
+}
+
+.subtitle-group-info {
+    margin-top: 16px;
+    font-size: 18px;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+.all-time-group-container .token-group-stats .token-item-first-row .group-first-row-token {
+    display: flex;
+    align-items: center;
+    gap: 6px;
 }
